Updated path and links

--- a/docs/tutorials/basic/Tutorial-II-Loop-Constructs.ipynb
+++ b/docs/tutorials/basic/Tutorial-II-Loop-Constructs.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "_q7iLq3GUYMz"
@@ -11,22 +12,23 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
+        "id": "5mfUKtGTUYM1",
         "pycharm": {
           "name": "#%% md\n"
-        },
-        "id": "5mfUKtGTUYM1"
+        }
       },
       "source": [
         "**[AutoRA](https://pypi.org/project/autora/)** (**Au**tomated **R**esearch **A**ssistant) is an open-source framework designed to automate various stages of empirical research, including model discovery, experimental design, and data collection.\n",
         "\n",
         "This notebook is the second of four notebooks within the basic tutorials of ``autora``. We suggest that you go through these notebooks in order as each builds upon the last. However, each notebook is self-contained and so there is no need to *run* the content of the last notebook for your current notebook. We will here provide a link to each notebook, but we will also provide a link at the end of each notebook to navigate you to the next notebook.\n",
         "\n",
-        "[AutoRA Basic Tutorial I: Components](www.addlink.com) <br>\n",
-        "[AutoRA Basic Tutorial II: Loop Constructs](www.addlink.com) <br>\n",
-        "[AutoRA Basic Tutorial III: Workflow Logic](www.addlink.com) <br>\n",
-        "[AutoRA Basic Tutorial IV: Customization](www.addlink.com) <br>\n",
+        "[AutoRA Basic Tutorial I: Components](https://autoresearch.github.io/autora/tutorials/basic/Tutorial-I-Components/) <br>\n",
+        "[AutoRA Basic Tutorial II: Loop Constructs](https://autoresearch.github.io/autora/tutorials/basic/Tutorial-II-Loop-Constructs/) <br>\n",
+        "[AutoRA Basic Tutorial III: Workflow Logic](https://autoresearch.github.io/autora/tutorials/basic/Tutorial-III-Workflow-Logic/) <br>\n",
+        "[AutoRA Basic Tutorial IV: Customization](https://autoresearch.github.io/autora/tutorials/basic/Tutorial-IV-Customization/) <br>\n",
         "\n",
         "These notebooks provide a comprehensive introduction to the capabilities of ``autora``. **It demonstrates the fundamental components of ``autora``, and how they can be combined to facilitate automated (closed-loop) empirical research through synthetic experiments.**\n",
         "\n",
@@ -34,14 +36,15 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "7bD8W7cfhZ5n"
+      },
       "source": [
         "## Tutorial Setup\n",
         "This tutorial is self-contained so that you do not need to run the previous notebook to begin. However, the four notebooks are continuous so that what we define in a previous notebook should still exist within this notebook. As such, we will here re-run relevant code from past tutorials. We will not again walk you through these, but if you need a reminder what they are then go see the descriptions in previous notebooks."
-      ],
-      "metadata": {
-        "id": "7bD8W7cfhZ5n"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -89,6 +92,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0ZISUerxUYNL"
@@ -118,13 +122,14 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "## Example 1: Falsification Sampler"
-      ],
       "metadata": {
         "id": "kO_HTQMPm7LQ"
-      }
+      },
+      "source": [
+        "## Example 1: Falsification Sampler"
+      ]
     },
     {
       "cell_type": "code",
@@ -138,80 +143,80 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 100/100 [00:26<00:00,  3.84it/s]\n",
             "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loss in cycle 0: 0.0\n",
             "Discovered Model: sin(X0)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 100/100 [00:28<00:00,  3.56it/s]\n",
             "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loss in cycle 1: 0.0\n",
             "Discovered Model: sin(X0)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 100/100 [00:14<00:00,  7.10it/s]\n",
             "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loss in cycle 2: 0.5526484578348648\n",
             "Discovered Model: _a0_\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 100/100 [00:17<00:00,  5.60it/s]\n",
             "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loss in cycle 3: 0.0\n",
             "Discovered Model: sin(X0)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 100/100 [00:16<00:00,  6.25it/s]\n",
             "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loss in cycle 4: 0.0\n",
             "Discovered Model: sin(X0)\n"
@@ -261,6 +266,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "B0lVQWuCUYNL"
@@ -284,75 +290,75 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 100/100 [00:40<00:00,  2.47it/s]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loss in cycle 0: 0.0\n",
             "Discovered BMS Model: sin(X0)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 100/100 [00:18<00:00,  5.53it/s]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loss in cycle 1: 0.0\n",
             "Discovered BMS Model: sin(X0)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 100/100 [00:19<00:00,  5.16it/s]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loss in cycle 2: 0.0\n",
             "Discovered BMS Model: sin(X0)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 100/100 [00:15<00:00,  6.37it/s]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loss in cycle 3: 0.0\n",
             "Discovered BMS Model: sin(X0)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 100/100 [00:24<00:00,  4.01it/s]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loss in cycle 4: 0.0\n",
             "Discovered BMS Model: sin(X0)\n"
@@ -399,17 +405,18 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "NZgqanLagOv_"
+      },
       "source": [
         "# Next Notebook\n",
         "While the basic loop construct is flexible, there are more convenient ways to specify a research cycle in ``autora``. The next notebook illustrates the use of these constructs.\n",
         "\n",
         "Follow this link for the next notebook tutorial:\n",
-        "[AutoRA Basic Tutorial III: Workflow Logic](www.addlink.com) <br>"
-      ],
-      "metadata": {
-        "id": "NZgqanLagOv_"
-      }
+        "[AutoRA Basic Tutorial III: Workflow Logic](https://autoresearch.github.io/autora/tutorials/basic/Tutorial-III-Workflow-Logic/) <br>"
+      ]
     }
   ],
   "metadata": {
