--- a/docs/tutorials/basic/Tutorial-III-Functional-Workflow.ipynb
+++ b/docs/tutorials/basic/Tutorial-III-Functional-Workflow.ipynb
@@ -960,7 +960,7 @@
    "outputs": [],
    "source": [
     "#### We will first define a new experimentalist\n",
-    "def uniform_sample(variables: VariableCollection, conditions: pd.DataFrame, num_samples = 1, random_state: Optional[int] = None):\n",
+    "def uniform_sample(variables: VariableCollection, conditions: pd.DataFrame, num_samples: int = 1, random_state: Optional[int] = None):\n",
     "\n",
     "    \"\"\"\n",
     "    An experimentalist that selects the least represented datapoints\n",
