Updated tutorials 1 and 2 with current Autora state (But problem)
The problem is the autora changes are underway, so some of it is half done and so we need to update again once it is all done.

--- a/docs/tutorials/basic/Tutorial-II-Loop-Constructs.ipynb
+++ b/docs/tutorials/basic/Tutorial-II-Loop-Constructs.ipynb
@@ -68,7 +68,7 @@
     "import numpy as np\n",
     "import torch\n",
     "from autora.variable import Variable, ValueType, VariableCollection\n",
-    "from autora.experimentalist.pooler.random_pooler import random_pool\n",
+    "from autora.experimentalist.random import random_pool\n",
     "from autora.experimentalist.sampler.falsification import falsification_sample\n",
     "from autora.experimentalist.sampler.model_disagreement import model_disagreement_sample\n",
     "from autora.theorist.bms import BMSRegressor\n",
@@ -84,12 +84,11 @@
     "\n",
     "#### Define condition pool ####\n",
     "condition_pool = np.linspace(0, 2 * np.pi, 100)\n",
-    "condition_pool = condition_pool.reshape((len(condition_pool), 1))\n",
     "\n",
-    "#### Define metadata ####\n",
+    "#### Define variables ####\n",
     "iv = Variable(name=\"x\", value_range=(0, 2 * np.pi), allowed_values=condition_pool)\n",
     "dv = Variable(name=\"y\", type=ValueType.REAL)\n",
-    "metadata = VariableCollection(independent_variables=[iv],dependent_variables=[dv])\n",
+    "variables = VariableCollection(independent_variables=[iv],dependent_variables=[dv])\n",
     "\n",
     "#### Define theorists ####\n",
     "theorist_lr = linear_model.LinearRegression()\n",
@@ -106,7 +105,7 @@
     "\n",
     "The following code block demonstrates how to build such a workflow using the components introduced in the preceding notebook, such as\n",
     "\n",
-    "- ``metadata`` (object specifying variables of the experiment) <br>\n",
+    "- ``variables`` (object specifying variables of the experiment) <br>\n",
     "- ``run_experiment`` (function for collecting data) <br>\n",
     "- ``theorist_bms`` (scikit learn estimator for discovering equations using the Bayesian Machine Scientist) <br>\n",
     "- ``random_pool`` (function for generating a random pool of experimental conditions) <br>\n",
@@ -142,7 +141,7 @@
      "output_type": "stream",
      "text": [
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n",
-      "100%|██████████| 100/100 [00:03<00:00, 27.81it/s]\n",
+      "100%|██████████| 100/100 [00:04<00:00, 23.40it/s]\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
       "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
@@ -152,15 +151,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss in cycle 0: 0.0\n",
-      "Discovered Model: sin(X0)\n"
+      "[[0.        ]\n",
+      " [0.06346652]\n",
+      " [0.12693304]]\n",
+      "Loss in cycle 0: 0.4950015317483731\n",
+      "Discovered Model: -0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 27.69it/s]\n",
+      "100%|██████████| 100/100 [00:04<00:00, 24.71it/s]\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
       "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
@@ -170,7 +172,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss in cycle 1: 0.0\n",
+      "[[6.28318531]\n",
+      " [6.21971879]\n",
+      " [6.15625227]]\n",
+      "Loss in cycle 1: 0.99\n",
       "Discovered Model: sin(X0)\n"
      ]
     },
@@ -178,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 24.21it/s]\n",
+      "100%|██████████| 100/100 [00:04<00:00, 23.75it/s]\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
       "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
@@ -188,7 +193,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss in cycle 2: 0.0\n",
+      "[[5.07732146]\n",
+      " [5.01385494]\n",
+      " [5.14078798]]\n",
+      "Loss in cycle 2: 0.99\n",
       "Discovered Model: sin(X0)\n"
      ]
     },
@@ -196,7 +204,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 26.50it/s]\n",
+      "100%|██████████| 100/100 [00:04<00:00, 24.73it/s]\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
       "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
@@ -206,7 +214,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss in cycle 3: 0.0\n",
+      "[[0.        ]\n",
+      " [0.06346652]\n",
+      " [0.12693304]]\n",
+      "Loss in cycle 3: 0.99\n",
       "Discovered Model: sin(X0)\n"
      ]
     },
@@ -214,7 +225,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 26.33it/s]\n",
+      "100%|██████████| 100/100 [00:03<00:00, 25.01it/s]\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
       "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n"
      ]
@@ -223,7 +234,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss in cycle 4: 0.0\n",
+      "[[0.38079911]\n",
+      " [0.44426563]\n",
+      " [0.31733259]]\n",
+      "Loss in cycle 4: 0.99\n",
       "Discovered Model: sin(X0)\n"
      ]
     }
@@ -233,11 +247,11 @@
     "measurements_per_cycle = 3 # number of data points to collect for each cycle\n",
     "\n",
     "# generate an initial set of experimental conditions\n",
-    "conditions = random_pool(metadata.independent_variables,\n",
-    "                                 num_samples=measurements_per_cycle)\n",
+    "conditions = random_pool(variables=variables,\n",
+    "                         num_samples=measurements_per_cycle)\n",
     "\n",
     "# convert iterator into 2-dimensional numpy array\n",
-    "conditions = np.array(list(conditions)).reshape(-1, 1)\n",
+    "conditions = np.array(list(conditions.values)).reshape(-1, 1)\n",
     "\n",
     "# collect initial set of observations\n",
     "observations = run_experiment(conditions)\n",
@@ -253,11 +267,12 @@
     "          model=theorist_bms,\n",
     "          reference_conditions=conditions,\n",
     "          reference_observations=observations,\n",
-    "          metadata=metadata,\n",
+    "          metadata=variables,\n",
     "          num_samples=measurements_per_cycle,\n",
     "      )\n",
     "\n",
     "  # obtain new observations\n",
+    "  print(new_conditions)\n",
     "  new_observations = run_experiment(new_conditions)\n",
     "\n",
     "  # combine old and new conditions and observations\n",
@@ -265,7 +280,7 @@
     "  observations = np.concatenate((observations, new_observations))\n",
     "\n",
     "  # evaluate model of the theorist based on its ability to predict each observation from the ground truth, evaluated across the entire space of experimental conditions\n",
-    "  loss = np.mean(np.square(theorist_bms.predict(condition_pool) - ground_truth(condition_pool)))\n",
+    "  loss = np.mean(np.square(theorist_bms.predict(condition_pool.reshape(-1,1)) - ground_truth(condition_pool)))\n",
     "  print(\"Loss in cycle {}: {}\".format(cycle, loss))\n",
     "  print(\"Discovered Model: \" +  theorist_bms.repr())\n"
    ]
@@ -291,75 +306,7 @@
      "output_type": "stream",
      "text": [
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n",
-      "100%|██████████| 100/100 [00:04<00:00, 23.84it/s]\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss in cycle 0: 0.0\n",
-      "Discovered BMS Model: sin(X0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 27.23it/s]\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss in cycle 1: 0.0\n",
-      "Discovered BMS Model: sin(X0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 23.79it/s]\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss in cycle 2: 0.0\n",
-      "Discovered BMS Model: sin(X0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 26.81it/s]\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss in cycle 3: 0.49765210053720216\n",
-      "Discovered BMS Model: -0.05\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 26.17it/s]\n",
+      "100%|██████████| 100/100 [00:03<00:00, 25.54it/s]\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting finished\n"
      ]
     },
@@ -367,8 +314,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss in cycle 4: 0.0009571292126012284\n",
-      "Discovered BMS Model: (0.96 * sin(X0))\n"
+      "[0.         0.06346652 0.12693304]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "all the input arrays must have same number of dimensions, but the array at index 0 has 2 dimension(s) and the array at index 1 has 1 dimension(s)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 33\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[39m# combine old and new conditions and observations\u001b[39;00m\n\u001b[0;32m     32\u001b[0m conditions \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mconcatenate((conditions, new_conditions\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m)))\n\u001b[1;32m---> 33\u001b[0m observations \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mconcatenate((observations, new_observations))\n\u001b[0;32m     35\u001b[0m \u001b[39m# evaluate model of the theorist based on its ability to predict each observation from the ground truth, evaluated across the entire space of experimental conditions\u001b[39;00m\n\u001b[0;32m     36\u001b[0m loss \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmean(np\u001b[39m.\u001b[39msquare(theorist_bms\u001b[39m.\u001b[39mpredict(condition_pool\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m)) \u001b[39m-\u001b[39m ground_truth(condition_pool)))\n",
+      "\u001b[1;31mValueError\u001b[0m: all the input arrays must have same number of dimensions, but the array at index 0 has 2 dimension(s) and the array at index 1 has 1 dimension(s)"
      ]
     }
    ],
@@ -377,11 +334,11 @@
     "measurements_per_cycle = 3 # number of data points to collect for each cycle\n",
     "\n",
     "# generate an initial set of experimental conditions\n",
-    "conditions = random_pool(metadata.independent_variables,\n",
-    "                                 num_samples=measurements_per_cycle)\n",
+    "conditions = random_pool(variables=variables,\n",
+    "                         num_samples=measurements_per_cycle)\n",
     "\n",
     "# convert iterator into 2-dimensional numpy array\n",
-    "conditions = np.array(list(conditions)).reshape(-1, 1)\n",
+    "conditions = np.array(list(conditions.values)).reshape(-1, 1)\n",
     "\n",
     "# collect initial set of observations\n",
     "observations = run_experiment(conditions)\n",
@@ -400,14 +357,15 @@
     "      )\n",
     "\n",
     "  # obtain new observations\n",
+    "  print(new_conditions)\n",
     "  new_observations = run_experiment(new_conditions)\n",
     "\n",
     "  # combine old and new conditions and observations\n",
-    "  conditions = np.concatenate((conditions, new_conditions))\n",
-    "  observations = np.concatenate((observations, new_observations))\n",
+    "  conditions = np.concatenate((conditions, new_conditions.reshape(-1,1)))\n",
+    "  observations = np.concatenate((observations, new_observations.reshape(-1,1)))\n",
     "\n",
     "  # evaluate model of the theorist based on its ability to predict each observation from the ground truth, evaluated across the entire space of experimental conditions\n",
-    "  loss = np.mean(np.square(theorist_bms.predict(condition_pool) - ground_truth(condition_pool)))\n",
+    "  loss = np.mean(np.square(theorist_bms.predict(condition_pool.reshape(-1,1)) - ground_truth(condition_pool)))\n",
     "  print(\"Loss in cycle {}: {}\".format(cycle, loss))\n",
     "  print(\"Discovered BMS Model: \" +  theorist_bms.repr())\n"
    ]
