--- a/docs/tutorials/basic/Tutorial-III-Functional-Workflow.ipynb
+++ b/docs/tutorials/basic/Tutorial-III-Functional-Workflow.ipynb
@@ -44,11 +44,12 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1057721313.py, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 16\u001b[1;36m\u001b[0m\n\u001b[1;33m    def plot_from_state(s,'sin(x)'):\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2 -> 23.2.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -367,7 +368,7 @@
     "print(\"\\033[1mPrevious Model:\\033[0m\")\n",
     "print(f\"{s.model}\\n\")\n",
     "\n",
-    "s = theorist(s)\n",
+    "s = theorist(s, seed=42)\n",
     "\n",
     "print(\"\\n\\033[1mUpdated Model:\\033[0m\")\n",
     "print(s.model)\n",
