Fixed custom theorist not working

--- a/docs/tutorials/basic/Tutorial-IV-Customization.ipynb
+++ b/docs/tutorials/basic/Tutorial-IV-Customization.ipynb
@@ -880,7 +880,7 @@
     "        # fit polynomial\n",
     "        self.coeff = np.polyfit(c, o, self.degree)\n",
     "        self.polynomial = np.poly1d(self.coeff)\n",
-    "        pass\n",
+    "        return self\n",
     "\n",
     "    def predict(self, conditions):\n",
     "        c = np.array(conditions)\n",
