docs: fix typo in Equation Discovery.ipynb

--- a/docs/theorist/Equation Discovery.ipynb
+++ b/docs/theorist/Equation Discovery.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Automated Equation Discovery With The Bayesian Machine Scientist \n",
     "\n",
-    "In this tutorial we will demonstrate how we can autonomously recovery equations from data using the Bayesian Machine Scientist. We will follow the sci-kit learn workflow,"
+    "In this tutorial we will demonstrate how to autonomously recover equations from data using the Bayesian Machine Scientist. We will follow the sci-kit learn workflow."
    ]
   },
   {
@@ -32,9 +32,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/110.5 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m110.5/110.5 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25h"
+      "\u001B[?25l     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m0.0/110.5 kB\u001B[0m \u001B[31m?\u001B[0m eta \u001B[36m-:--:--\u001B[0m\r",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m110.5/110.5 kB\u001B[0m \u001B[31m6.5 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\n",
+      "\u001B[?25h"
      ]
     }
    ],
@@ -397,10 +397,10 @@
      "evalue": "ignored",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-9d8d136c217b>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpoly_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'PolynomialRegressor' object has no attribute 'model_'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-9-9d8d136c217b>\u001B[0m in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mpoly_model\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmodel_\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m: 'PolynomialRegressor' object has no attribute 'model_'"
      ]
     }
    ],
@@ -1279,7 +1279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See https://autoresearch.github.io/autora/tutorials/Introduction/ for a tutorial on closed-loop experimentation."
+    "See https://autoresearch.github.io/autora/tutorials/Introduction/ for a tutorial on closed-loop experimentation.\n"
    ]
   }
  ],
