chore: update experiment runners with new function name (run) and move added_noise from initialization to the run function

--- a/docs/theorist/Equation Discovery.ipynb
+++ b/docs/theorist/Equation Discovery.ipynb
@@ -83,11 +83,11 @@
     "constant = 3.0\n",
     "\n",
     "# synthetic experiment from autora inventory\n",
-    "synthetic_data = weber_fechner_law(constant=constant, added_noise=0.01)\n",
+    "synthetic_data = weber_fechner_law(constant=constant)\n",
     "\n",
     "# experimental data\n",
     "conditions = synthetic_data.domain()\n",
-    "observations = synthetic_data.experiment_runner(conditions)\n",
+    "observations = synthetic_data.run(conditions, added_noise=0.01)\n",
     "\n",
     "# split into train and test datasets\n",
     "conditions_train, conditions_test, observations_train, observations_test = train_test_split(conditions, observations)"
@@ -739,11 +739,11 @@
     "focus = 0.8\n",
     "\n",
     "# synthetic experiment from autora inventory\n",
-    "synthetic_data = luce_choice_ratio(focus=focus, added_noise=0.01)\n",
+    "synthetic_data = luce_choice_ratio(focus=focus)\n",
     "\n",
     "# experimental data\n",
     "conditions = synthetic_data.domain()\n",
-    "observations = synthetic_data.experiment_runner(conditions)\n",
+    "observations = synthetic_data.run(conditions, added_noise=0.01)\n",
     "\n",
     "# set probabilities to choice values\n",
     "observations = np.where(observations < 0.5, 0, 1)\n",
