--- a/docs/tutorials/basic/Tutorial-I-Components.ipynb
+++ b/docs/tutorials/basic/Tutorial-I-Components.ipynb
@@ -806,7 +806,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from autora.experimentalist.sampler.falsification import falsification_sample\n",
+    "from autora.experimentalist.falsification import falsification_sample\n",
     "\n",
     "new_conditions_falsification = falsification_sample(\n",
     "        condition_pool=condition_pool,\n",
