--- a/docs/tutorials/basic/Tutorial-II-Loop-Constructs.ipynb
+++ b/docs/tutorials/basic/Tutorial-II-Loop-Constructs.ipynb
@@ -47,13 +47,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 23.2 -> 23.2.1\n",
+      "[notice] A new release of pip is available: 23.2 -> 23.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
+      "WARNING: autora 3.1.1 does not provide the extra 'experimentalist-model-disagreement'\n",
+      "\n",
+      "[notice] A new release of pip is available: 23.2 -> 23.3.1\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
       "\n",
-      "[notice] A new release of pip is available: 23.2 -> 23.2.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
-      "\n",
-      "[notice] A new release of pip is available: 23.2 -> 23.2.1\n",
+      "[notice] A new release of pip is available: 23.2 -> 23.3.1\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
@@ -61,7 +62,7 @@
    "source": [
     "#### Installation ####\n",
     "!pip install -q \"autora[experimentalist-falsification]\"\n",
-    "!pip install -q \"autora[experimentalist-sampler-model-disagreement]\"\n",
+    "!pip install -q \"autora[experimentalist-model-disagreement]\"\n",
     "!pip install -q \"autora[theorist-bms]\"\n",
     "\n",
     "#### Import modules ####\n",
@@ -69,8 +70,8 @@
     "import torch\n",
     "from autora.variable import Variable, ValueType, VariableCollection\n",
     "from autora.experimentalist.random import random_pool\n",
-    "from autora.experimentalist.sampler.falsification import falsification_sample\n",
-    "from autora.experimentalist.sampler.model_disagreement import model_disagreement_sample\n",
+    "from autora.experimentalist.falsification import falsification_sample\n",
+    "from autora.experimentalist.model_disagreement import model_disagreement_sample\n",
     "from autora.theorist.bms import BMSRegressor\n",
     "from sklearn import linear_model\n",
     "\n",
