Added theorist wrapper explanation.

--- a/docs/tutorials/basic/Tutorial-III-Functional-Workflow.ipynb
+++ b/docs/tutorials/basic/Tutorial-III-Functional-Workflow.ipynb
@@ -262,7 +262,7 @@
     "\n",
     "Now that we have initialized the state, we need to start preparing components of `autora` to work with the state - namely, experimentalists, experiment runners, and theorists. \n",
     "\n",
-    "These components are defined in the same way as past tutorials. All we need to do so that these can function within the state is to wrap them in specialized state functions. The wrappers are:\n",
+    "These components are defined in the same way as past tutorials. All we need to do so that these can function within the state is to wrap them in specialized state functions. Note that as the theorists are using the `scikit-learn` interface, this will need to be wrapped differently than the experiment runners and experimentalists. The wrappers are:\n",
     "- `on_state()` for experiment runners and experimentalists\n",
     "- `estimator_on_state()` for theorists (specifically, scikit-learn estimators)\n",
     "\n",
