Added theorist model list note

--- a/docs/tutorials/basic/Tutorial-I-Components.ipynb
+++ b/docs/tutorials/basic/Tutorial-I-Components.ipynb
@@ -445,7 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once instantiated, we can fit the theorist to link experimental conditions with observations. However, before doing so, we should convert both inputs into 2-dimensional numpy arrays."
+    "Once instantiated, we can fit the theorist to link experimental conditions with observations. However, before doing so, we should convert both inputs into 2-dimensional numpy arrays. Theorists should return a single model directly or multiple models within a list."
    ]
   },
   {
