--- a/docs/tutorials/basic/Tutorial-III-Functional-Workflow.ipynb
+++ b/docs/tutorials/basic/Tutorial-III-Functional-Workflow.ipynb
@@ -488,7 +488,7 @@
    "source": [
     "### Run the Theorist\n",
     "\n",
-    "Let's run the theorist and see how the state changes."
+    "Let's run the theorist and see how the state changes. Note that theorists should return a single model directly or multiple models within a list to work with the state."
    ]
   },
   {
