--- a/docs/tutorials/basic/Tutorial-II-Loop-Constructs.ipynb
+++ b/docs/tutorials/basic/Tutorial-II-Loop-Constructs.ipynb
@@ -142,30 +142,8 @@
      "output_type": "stream",
      "text": [
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n",
-      "100%|██████████| 100/100 [00:04<00:00, 23.40it/s]\n",
+      "100%|██████████| 100/100 [00:04<00:00, 23.65it/s]\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
-      "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.        ]\n",
-      " [0.06346652]\n",
-      " [0.12693304]]\n",
-      "Loss in cycle 0: 0.4950015317483731\n",
-      "Discovered Model: -0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 24.71it/s]\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
-      "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
      ]
     },
@@ -176,6 +154,26 @@
       "[[6.28318531]\n",
       " [6.21971879]\n",
       " [6.15625227]]\n",
+      "Loss in cycle 0: 1.0728386415534816\n",
+      "Discovered Model: 0.76\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 23.15it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6.28318531]\n",
+      " [6.21971879]\n",
+      " [1.3962634 ]]\n",
       "Loss in cycle 1: 0.99\n",
       "Discovered Model: sin(X0)\n"
      ]
@@ -184,9 +182,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 23.75it/s]\n",
+      "100%|██████████| 100/100 [00:04<00:00, 20.20it/s]\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
-      "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
      ]
     },
@@ -194,20 +191,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[5.07732146]\n",
-      " [5.01385494]\n",
-      " [5.14078798]]\n",
-      "Loss in cycle 2: 0.99\n",
-      "Discovered Model: sin(X0)\n"
+      "[[4.25225672]\n",
+      " [4.31572324]\n",
+      " [4.1887902 ]]\n",
+      "Loss in cycle 2: inf\n",
+      "Discovered Model: (1.29 / X0)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 24.73it/s]\n",
+      "100%|██████████| 100/100 [00:04<00:00, 24.55it/s]\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
-      "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
      ]
     },
@@ -218,26 +214,25 @@
       "[[0.        ]\n",
       " [0.06346652]\n",
       " [0.12693304]]\n",
-      "Loss in cycle 3: 0.99\n",
-      "Discovered Model: sin(X0)\n"
+      "Loss in cycle 3: 0.4973522295525592\n",
+      "Discovered Model: 0.05\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 25.01it/s]\n",
-      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
-      "WARNING:autora.utils.deprecation:Use `falsification_score_sample_from_predictions` instead. `falsification_score_sampler_from_predictions` is deprecated.\n"
+      "100%|██████████| 100/100 [00:04<00:00, 24.49it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.38079911]\n",
-      " [0.44426563]\n",
-      " [0.31733259]]\n",
+      "[[0.06346652]\n",
+      " [0.12693304]\n",
+      " [0.19039955]]\n",
       "Loss in cycle 4: 0.99\n",
       "Discovered Model: sin(X0)\n"
      ]
@@ -264,7 +259,7 @@
     "\n",
     "  # obtain new conditions\n",
     "  new_conditions = falsification_sample(\n",
-    "          condition_pool=condition_pool,\n",
+    "          conditions=condition_pool,\n",
     "          model=theorist_bms,\n",
     "          reference_conditions=conditions,\n",
     "          reference_observations=observations,\n",
@@ -307,7 +302,7 @@
      "output_type": "stream",
      "text": [
       "INFO:autora.theorist.bms.regressor:BMS fitting started\n",
-      "100%|██████████| 100/100 [00:03<00:00, 25.54it/s]\n",
+      "100%|██████████| 100/100 [00:04<00:00, 23.55it/s]\n",
       "INFO:autora.theorist.bms.regressor:BMS fitting finished\n"
      ]
     },
@@ -315,18 +310,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.         0.06346652 0.12693304]\n"
+      "           0\n",
+      "99  6.283185\n",
+      "98  6.219719\n",
+      "97  6.156252\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "all the input arrays must have same number of dimensions, but the array at index 0 has 2 dimension(s) and the array at index 1 has 1 dimension(s)",
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'reshape'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 33\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[39m# combine old and new conditions and observations\u001b[39;00m\n\u001b[0;32m     32\u001b[0m conditions \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mconcatenate((conditions, new_conditions\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m)))\n\u001b[1;32m---> 33\u001b[0m observations \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mconcatenate((observations, new_observations))\n\u001b[0;32m     35\u001b[0m \u001b[39m# evaluate model of the theorist based on its ability to predict each observation from the ground truth, evaluated across the entire space of experimental conditions\u001b[39;00m\n\u001b[0;32m     36\u001b[0m loss \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmean(np\u001b[39m.\u001b[39msquare(theorist_bms\u001b[39m.\u001b[39mpredict(condition_pool\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m)) \u001b[39m-\u001b[39m ground_truth(condition_pool)))\n",
-      "\u001b[1;31mValueError\u001b[0m: all the input arrays must have same number of dimensions, but the array at index 0 has 2 dimension(s) and the array at index 1 has 1 dimension(s)"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10828\\1882676081.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m     29\u001b[0m   \u001b[0mnew_observations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrun_experiment\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_conditions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m   \u001b[1;31m# combine old and new conditions and observations\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m   \u001b[0mconditions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconditions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_conditions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m   \u001b[0mobservations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobservations\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_observations\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m   \u001b[1;31m# evaluate model of the theorist based on its ability to predict each observation from the ground truth, evaluated across the entire space of experimental conditions\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m   \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msquare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtheorist_bms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcondition_pool\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mground_truth\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcondition_pool\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\cwill\\GitHub\\virtualEnvs\\autoraEnv\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5985\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5986\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5987\u001b[0m         ):\n\u001b[0;32m   5988\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5989\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'reshape'"
      ]
     }
    ],
@@ -362,8 +361,8 @@
     "  new_observations = run_experiment(new_conditions)\n",
     "\n",
     "  # combine old and new conditions and observations\n",
-    "  conditions = np.concatenate((conditions, new_conditions.reshape(-1,1)))\n",
-    "  observations = np.concatenate((observations, new_observations.reshape(-1,1)))\n",
+    "  conditions = np.concatenate((conditions, new_conditions))\n",
+    "  observations = np.concatenate((observations, new_observations))\n",
     "\n",
     "  # evaluate model of the theorist based on its ability to predict each observation from the ground truth, evaluated across the entire space of experimental conditions\n",
     "  loss = np.mean(np.square(theorist_bms.predict(condition_pool.reshape(-1,1)) - ground_truth(condition_pool)))\n",
@@ -390,9 +389,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "autoraKernel",
+   "display_name": "autoraEnv",
    "language": "python",
-   "name": "autorakernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
