--- a/docs/theorist/Equation Discovery.ipynb
+++ b/docs/theorist/Equation Discovery.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this tutorial we will demonstrate how to autonomously recover equations from data using the Bayesian Machine Scientist. We will follow the sci-kit learn workflow.\n",
     "\n",
-    "Note: this notebook requires Python 3.10\n"
+    "Note: this tutorial requires Python 3.10 to run successfully."
    ]
   },
   {
