update installation-path of synthetic equation

--- a/docs/tutorials/basic/Tutorial IV Customization.ipynb
+++ b/docs/tutorials/basic/Tutorial IV Customization.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "#### Installation ####\n",
     "!pip install -q \"autora[theorist-bms]\"\n",
-    "!pip install -q \"autora-synthetic-abstract-equation\"\n",
+    "!pip install -q \"autora[experiment-runner-synthetic-abstract-equation]\"\n",
     "\n",
     "#### Import modules ####\n",
     "from typing import Optional\n",
