rename experiment_runner to run in abstract equation runner

--- a/docs/tutorials/basic/Tutorial III Functional Workflow.ipynb
+++ b/docs/tutorials/basic/Tutorial III Functional Workflow.ipynb
@@ -327,7 +327,7 @@
     "\n",
     "#### Equation Experiment Method ####\n",
     "sin_experiment = equation_experiment(sp.simplify('sin(x)'), variables.independent_variables, variables.dependent_variables[0])\n",
-    "sin_runner = sin_experiment.experiment_runner\n",
+    "sin_runner = sin_experiment.run\n",
     "\n",
     "experiment_runner = on_state(sin_runner, output=[\"experiment_data\"])"
    ]
