--- a/docs/tutorials/basic/Tutorial IV Customization.ipynb
+++ b/docs/tutorials/basic/Tutorial IV Customization.ipynb
@@ -149,7 +149,7 @@
     "\n",
     "#### Define experiment runner and wrap with state functionality ####\n",
     "sin_experiment = equation_experiment(sp.simplify('sin(x)'), variables.independent_variables, variables.dependent_variables[0])\n",
-    "sin_runner = sin_experiment.experiment_runner\n",
+    "sin_runner = sin_experiment.run\n",
     "\n",
     "experiment_runner = on_state(sin_runner, output=[\"experiment_data\"])\n",
     "\n",
